<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/track"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/allowTrack"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:layout_gravity="center_horizontal"
        android:text="@string/search"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/updatedetails"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/updatedetails"/>

</LinearLayout>